--- a/common/Games/CMakeLists.txt
+++ b/common/Games/CMakeLists.txt
@@ -12,7 +12,15 @@ add_library(${LIB_NAME} STATIC ${SOURCES})
 target_link_libraries(${LIB_NAME}
                         PUBLIC NetworkHandler
 
-                        PUBLIC sfml-graphics
+                        PUBLIC debug sfml-graphics-d
+                        PUBLIC debug sfml-window-d
+                        PUBLIC debug sfml-system-d
+                        PUBLIC debug SFGUI-d
+
+                        PUBLIC optimized sfml-graphics
+                        PUBLIC debug sfml-window
+                        PUBLIC debug sfml-system
+                        PUBLIC optimized SFGUI
                       )
 
 target_include_directories(${LIB_NAME}
