--- a/common/Games/DiceRoller/Client/CMakeLists.txt
+++ b/common/Games/DiceRoller/Client/CMakeLists.txt
@@ -4,20 +4,25 @@ set(SOURCES
         GraphicalView.cpp
         Controller.cpp
         ViewLogic.cpp
+        Client.cpp
     )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
 
-target_link_libraries(${LIB_NAME}
-                        PUBLIC Logger
-                        PUBLIC ErrorHandler
-                        PUBLIC Games
-                        PUBLIC DiceRoller
-                      )
+target_link_libraries(
+        ${LIB_NAME}
 
-target_include_directories(${LIB_NAME}
-                             PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
-                             PUBLIC headers
+        PUBLIC Logger
+        PUBLIC ErrorHandler
+        PUBLIC Games
+        PUBLIC DiceRoller
+        PUBLIC GameWindow
+    )
 
-                             PRIVATE headers/DiceRoller
-                           )
+target_include_directories(
+        ${LIB_NAME}
+
+        PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
+        PUBLIC headers
+        PRIVATE headers/DiceRoller
+    )
