WIP: Changes to GraphicalView

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,5 +27,6 @@ add_subdirectory(common/Utils/Rng)
 add_subdirectory(common/Network/NetworkHandler)
 add_subdirectory(common/Games)
 add_subdirectory(common/GameUtils/GameWindow)
+add_subdirectory(common/GameUtils/TextureLoader)
 add_subdirectory(PlanszowkerServer)
 add_subdirectory(PlanszowkerClient)
