--- a/PlanszowkerServer/CMakeLists.txt
+++ b/PlanszowkerServer/CMakeLists.txt
@@ -6,6 +6,10 @@ set(SOURCES
 
 add_executable(${EXEC_NAME} ${SOURCES})
 
+add_executable(testingLua testingLUA.cpp)
+target_link_libraries(testingLua PRIVATE lua5.3)
+include_directories(testingLua ${LUA_INCLUDE_DIR})
+
 target_link_libraries(${EXEC_NAME}
                       PRIVATE ErrorHandler
                       PRIVATE DiceRoller
