--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,15 +14,18 @@ find_package(SFML 2.5.1 COMPONENTS network graphics window system REQUIRED)
 find_package(Sol2 REQUIRED)
 find_package(Lua REQUIRED)
 
-include_directories(common)
+include_directories(${LUA_INCLUDE_DIR})
 
-add_subdirectory(common/Utils/ClientInfo)
-add_subdirectory(common/Utils/ErrorHandler)
-add_subdirectory(common/Utils/Logger)
-add_subdirectory(common/Utils/CompilerUtils)
-add_subdirectory(common/Utils/TimeMeasurement)
-add_subdirectory(common/Utils/Rng)
-add_subdirectory(common/Network/NetworkHandler)
-add_subdirectory(common/Games)
+include_directories(libs)
+
+add_subdirectory(libs/Utils/ClientInfo)
+add_subdirectory(libs/Utils/ErrorHandler)
+add_subdirectory(libs/Utils/Logger)
+add_subdirectory(libs/Utils/CompilerUtils)
+add_subdirectory(libs/Utils/TimeMeasurement)
+add_subdirectory(libs/Utils/Rng)
+add_subdirectory(libs/Network/NetworkHandler)
+add_subdirectory(libs/Games)
+add_subdirectory(libs/GamesServer)
 add_subdirectory(PlanszowkerServer)
 add_subdirectory(PlanszowkerClient)
