--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(libs/Utils/TimeMeasurement)
 add_subdirectory(libs/Utils/Rng)
 add_subdirectory(libs/Network/NetworkHandler)
 add_subdirectory(libs/Games)
+add_subdirectory(libs/GamesClient)
 add_subdirectory(libs/GamesServer)
 add_subdirectory(PlanszowkerServer)
 add_subdirectory(PlanszowkerClient)
