--- a/libs/Games/CMakeLists.txt
+++ b/libs/Games/CMakeLists.txt
@@ -4,7 +4,8 @@ project(${LIB_NAME})
 
 set(SOURCES
         GraphicalView.cpp
-    )
+        Objects.cpp
+        )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
 
@@ -12,6 +13,8 @@ target_link_libraries(${LIB_NAME}
                         PUBLIC NetworkHandler
 
                         PUBLIC lua5.3
+
+                        PUBLIC sfml-network
                       )
 
 target_include_directories(${LIB_NAME}
@@ -20,5 +23,3 @@ target_include_directories(${LIB_NAME}
                              PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
                              PRIVATE headers/Games
                            )
-
-add_subdirectory(DiceRoller)
