JSON parsing in client

--- a/PlanszowkerClient/CMakeLists.txt
+++ b/PlanszowkerClient/CMakeLists.txt
@@ -13,6 +13,8 @@ target_link_libraries(${EXEC_NAME}
                       sfml-graphics
                       sfml-network
 
+                      PUBLIC nlohmann_json::nlohmann_json
+
                       -static-libgcc
                       -static-libstdc++
                       )
