--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 find_package(SFML 2.5.1 COMPONENTS network graphics window system REQUIRED)
 find_package(Sol2 REQUIRED)
 find_package(Lua REQUIRED)
+find_package(nlohmann_json 3.2.0 REQUIRED)
 
 include_directories(${LUA_INCLUDE_DIR})
 
