Introduction to .plagame files handling

--- a/PlanszowkerServer/CMakeLists.txt
+++ b/PlanszowkerServer/CMakeLists.txt
@@ -1,13 +1,17 @@
 set(EXEC_NAME PlanszowkerServer)
 
-set(SOURCES
-    main.cpp
-    )
+set(
+        SOURCES
+        main.cpp
+)
 
 add_executable(${EXEC_NAME} ${SOURCES})
 
 add_executable(testingLua testingLUA.cpp)
 target_link_libraries(testingLua PRIVATE lua5.3)
+
+add_executable(testingZipios testingZipios.cpp)
+target_link_libraries(testingZipios PRIVATE zipios)
 
 target_link_libraries(${EXEC_NAME}
                       PRIVATE ErrorHandler
