Add default board texture; move testing into different dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(libs/GamesClient)
 add_subdirectory(libs/GamesServer)
 add_subdirectory(PlanszowkerServer)
 add_subdirectory(PlanszowkerClient)
+add_subdirectory(FunctionalTests)
