Test for assets transfer, refactor logic

--- a/FunctionalTests/CMakeLists.txt
+++ b/FunctionalTests/CMakeLists.txt
@@ -5,3 +5,9 @@ target_link_libraries(LuaTest PRIVATE lua5.3)
 
 add_executable(ZipiosTest ZipiosTest.cpp)
 target_link_libraries(ZipiosTest PRIVATE zipios)
+
+add_executable(AssetsTransferClient AssetsTransferClient.cpp)
+target_link_libraries(AssetsTransferClient PRIVATE sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d)
+
+add_executable(AssetsTransferServer AssetsTransferServer.cpp)
+target_link_libraries(AssetsTransferServer PRIVATE sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d)
