WIP: Receiving assets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(libs/Utils/Logger)
 add_subdirectory(libs/Utils/CompilerUtils)
 add_subdirectory(libs/Utils/TimeMeasurement)
 add_subdirectory(libs/Utils/Rng)
+add_subdirectory(libs/Utils/AssetsManager)
 add_subdirectory(libs/Network/NetworkHandler)
 add_subdirectory(libs/Games)
 add_subdirectory(libs/GamesClient)
