Assets can be transmited over network

--- a/libs/GamesClient/CMakeLists.txt
+++ b/libs/GamesClient/CMakeLists.txt
@@ -12,6 +12,9 @@ target_link_libraries(${LIB_NAME}
                         PUBLIC Logger
                         PUBLIC ErrorHandler
                         PUBLIC Games
+                        PUBLIC AssetsManager
+
+                        sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d
                       )
 
 target_include_directories(${LIB_NAME}
