--- a/FunctionalTests/CMakeLists.txt
+++ b/FunctionalTests/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(ZipiosTest ZipiosTest.cpp)
 target_link_libraries(ZipiosTest PRIVATE zipios)
 
 add_executable(AssetsTransferClient AssetsTransferClient.cpp)
-target_link_libraries(AssetsTransferClient PRIVATE sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d)
+target_link_libraries(AssetsTransferClient PUBLIC sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d)
 
 add_executable(AssetsTransferServer AssetsTransferServer.cpp)
-target_link_libraries(AssetsTransferServer PRIVATE sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d)
+target_link_libraries(AssetsTransferServer PUBLIC sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d)
