--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory(libs/Utils/Rng)
 add_subdirectory(libs/Utils/AssetsManager)
 add_subdirectory(libs/Utils/External/EasyLogging)
 add_subdirectory(libs/Network/NetworkHandler)
-add_subdirectory(libs/ServerSupervisor)
+add_subdirectory(libs/Supervisor)
 add_subdirectory(libs/Utils/PlametaParser)
 add_subdirectory(libs/Games)
 add_subdirectory(libs/GamesClient)
