--- a/libs/Network/NetworkHandler/CMakeLists.txt
+++ b/libs/Network/NetworkHandler/CMakeLists.txt
@@ -2,6 +2,7 @@ set(LIB_NAME NetworkHandler)
 
 set(SOURCES
         ServerPacketHandler.cpp
+        SupervisorPacketHandler.cpp
         ClientPacketHandler.cpp
    )
 
