--- a/libs/GamesClient/CMakeLists.txt
+++ b/libs/GamesClient/CMakeLists.txt
@@ -1,9 +1,8 @@
 set(LIB_NAME GamesClient)
 
 set(SOURCES
-      ConsoleView.cpp
       Controller.cpp
-      ViewLogic.cpp
+      GraphicalView.cpp
     )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
@@ -15,6 +14,8 @@ target_link_libraries(${LIB_NAME}
                         PUBLIC AssetsManager
 
                         sfml-graphics-d sfml-network-d sfml-system-d sfml-window-d
+
+                        SFGUI-d
                       )
 
 target_include_directories(${LIB_NAME}
