[WIP] Trying to solve problem with texture artifacts

--- a/libs/GamesClient/CMakeLists.txt
+++ b/libs/GamesClient/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LIB_NAME GamesClient)
 set(SOURCES
       Controller.cpp
       GraphicalView.cpp
+      FontManager.cpp
     )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
