--- a/planszowker_client/CMakeLists.txt
+++ b/planszowker_client/CMakeLists.txt
@@ -23,3 +23,6 @@ target_link_libraries(${EXEC_NAME}
 target_include_directories(${EXEC_NAME}
                            PRIVATE {CMAKE_CURRENT_SOURCE_DIR}
                            )
+
+# Copy data folder
+file(COPY "data" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
