--- a/functional_tests/CMakeLists.txt
+++ b/functional_tests/CMakeLists.txt
@@ -3,8 +3,8 @@ set(EXEC_NAME FunctionalTests)
 add_executable(LuaTest LuaTest.cpp)
 target_link_libraries(LuaTest PRIVATE lua)
 
-add_executable(ZipiosTest ZipiosTest.cpp)
-target_link_libraries(ZipiosTest PRIVATE zipios)
+add_executable(ZipLibTest ZipLibTest.cpp)
+target_link_libraries(ZipLibTest PRIVATE ${BZIP2} ${LZMA} ${ZLIB} ${ZIPLIB})
 
 add_executable(AssetsTransferClient AssetsTransferClient.cpp)
 target_link_libraries(AssetsTransferClient PUBLIC sfml-graphics sfml-network sfml-system sfml-window)
