WIP: Migration to ZipLib
Server is still crashing when trying to send assets to client.
Weird client error - probably related to bad data transmitted from
server.

--- a/libs/GamesServer/CMakeLists.txt
+++ b/libs/GamesServer/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(${LIB_NAME}
 
                         PUBLIC lua
 
-                        PRIVATE zipios
+                        PRIVATE ${BZIP2} ${LZMA} ${ZLIB} ${ZIPLIB} # ZipLib
                       )
 
 target_include_directories(${LIB_NAME}
