--- a/libs/GamesServer/CMakeLists.txt
+++ b/libs/GamesServer/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(${LIB_NAME}
 
                         PUBLIC lua
 
-                        PRIVATE ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB} ${ZIPLIB} # ZipLib
+                        PRIVATE ${ZIPLIB} ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB}
                       )
 
 target_include_directories(${LIB_NAME}
