--- a/libs/Utils/AssetsManager/CMakeLists.txt
+++ b/libs/Utils/AssetsManager/CMakeLists.txt
@@ -15,7 +15,7 @@ target_link_libraries(${LIB_NAME}
                         PRIVATE GamesServer
                         PRIVATE EasyLogging
 
-                        PRIVATE ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB} ${ZIPLIB} # ZipLib
+                        PRIVATE ${ZIPLIB} ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB}
                       )
 
 target_include_directories(${LIB_NAME}
