Add GameLobby state
There's a debug button for going back and forth between GameChoosingState and GameLobbyState

--- a/libs/Games/CMakeLists.txt
+++ b/libs/Games/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
         GamesMetaInfo.cpp
         States/GameChoosingState.cpp
         States/GameState.cpp
+        States/GameLobbyState.cpp
 
         Callbacks/GameChoosingCallbacks.cpp
         )
