Add CreateLobby callbacks
Handling still needs to be done

--- a/libs/Games/CMakeLists.txt
+++ b/libs/Games/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
         States/GameLobbyState.cpp
 
         Callbacks/GameChoosingCallbacks.cpp
+        Callbacks/GameLobbyCallbacks.cpp
         )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
