Add StartGame event handling

--- a/libs/Games/CMakeLists.txt
+++ b/libs/Games/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
         Callbacks/ICallbacks.cpp
         Callbacks/GameChoosingCallbacks.cpp
         Callbacks/GameLobbyCallbacks.cpp
+        Callbacks/GameCallbacks.cpp
         )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
